--- a/css/index.css
+++ b/css/index.css
@@ -50,6 +50,16 @@ body {
     text-align: center;
 }
 
+.right {
+    position: absolute;
+    top: 95%;
+    left: 95%;
+    -webkit-transform: translate(-95%, -95%);
+    transform: translate(-95%, -95%);
+    text-align: center;
+    font-size: 1rem;
+}
+
 h1 {
     font-size: 3rem;
     font-weight: 800;
@@ -61,3 +71,13 @@ p {
     font-weight: 400;
     margin: auto;
 }
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
